<resources>
    <string name="app_name">Writer\'s Assistant</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="writers_assistant_as">writer\'s</string>
    <string name="assistant_writer">assistant</string>
    <string name="buttonLoginText">Login</string>
    <string name="register">Register</string>
    <string name="LoginAsLogin">Login</string>
    <string name="ConfirmPassword">Confirm password</string>
    <string name="mainPage">Your books</string>
    <string name="ideasPage">Ideas</string>
    <string name="searchPage">Search</string>
    <string name="profilePage">Profile</string>
    <string name="giveAsYourPhoto">Without your permission to use the storage, the program will not work correctly, and you will not be able to change profile pictures, characters or add references.</string>
    <string name="thxxx">Thanks!</string>
    <string name="changeApplicationTheme">Change application theme</string>
    <string name="changeAccountPassword">Change account password</string>
    <string name="changeProgramLanguage">Change application language</string>
    <string name="aboutApplication">About application</string>
    <string name="logOutOfAccount">Log out of your account</string>
    <string name="aboutAppText">Writer\'s Assistant is a mobile app designed to help writers organize their creative process. Whether you\'re working on a novel, a screenplay, or a blog, this app provides essential tools for planning, writing, and managing your projects. Easily create character profiles, map out plotlines, and store all your notes in one place. Writer\'s Assistant ensures that your creative flow stays uninterrupted, and all your ideas are well-organized.</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_passwords">Enter passwords</string>
    <string name="passwords_don_t_match">Passwords don\'t match</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="enter_login">Enter login</string>
    <string name="image_loading_error">Image loading error</string>
    <string name="profile_image_updated">Profile image updated</string>
    <string name="forget_password">Forget password?</string>
    <string name="resetPassword">Reset password</string>
    <string name="sendEmail">Send reset letter</string>
    <string name="letterIsSended">A letter has been send to your email</string>
    <string name="sentError">Error sending email</string>
    <string name="accountEmail">Account email</string>
    <string name="yourBooksTitle">Your books</string>
    <string name="bookName">Book name</string>
    <string name="authorNameTitle">Author</string>
    <string name="book_description">Description</string>
    <string name="charactersButton">Characters</string>
    <string name="chaptersButton">Chapters</string>
    <string name="dictionaryButton">Dictionary</string>
    <string name="characterName">Character name</string>
    <string name="characterAge">Character age</string>
    <string name="appearanceDescription">Description of appearance</string>
    <string name="roleInTheBook">Role in the book</string>
    <string name="connections">Connections</string>
    <string name="groups">Groups</string>
    <string name="delete_book">Delete book</string>
    <string name="deletionConfirmation">Deletion confirmation</string>
    <string name="deletingBookText">Are you sure you want to delete the book?</string>
    <string name="answerYes">Yes</string>
    <string name="answerNo">No</string>
    <string name="bookDeleted">Book deleted</string>
    <string name="deletionError">Deletion error</string>
    <string name="locations">Locations</string>
    <string name="deleteCharacter">Delete character</string>
    <string name="deletingCharacterText">Are you sure you want to delete the character?</string>
    <string name="characterDeleted">Character deleted</string>
    <string name="keyPoints">Key points</string>
    <string name="chapterName">Chapter name</string>
    <string name="deleteChapter">Delete chapter</string>
    <string name="deletingChapterText">Are you sure you want to delete the chapter?</string>
    <string name="chapterDeleted">Chapter deleted</string>
    <string name="ideaTitle">Idea title</string>
    <string name="deleteIdea">Delete idea</string>
    <string name="deletingIdeaText">Are you sure you want to delete the idea?</string>
    <string name="ideaDeleted">Idea deleted</string>
    <string name="word">Word</string>
    <string name="deleteWord">Delete word</string>
    <string name="deletingWordText">Are you sure you want to delete the word?</string>
    <string name="wordDeleted">Word deleted</string>
    <string name="placeTitle">Place name</string>
    <string name="deletePlace">Delete place</string>
    <string name="references">References</string>
    <string name="deletingPlaceText">Are you sure you want to delete the place?</string>
    <string name="placeDeleted">Place deleted</string>
    <string name="groupName">Group name</string>
    <string name="deleteGroup">Delete group</string>
    <string name="deletingGroupText">Are you sure you want to delete the group?</string>
    <string name="groupDeleted">Group deleted</string>
    <string name="deletingImageText">Are you sure you want to delete the image?</string>
    <string name="loadedError">Loaded error</string>
    <string name="youCanOnly">"You can only upload "</string>
    <string name="images">" images"</string>
    <string name="goal">Goal</string>
    <string name="motivation">Motivation</string>
    <string name="prehistory">Prehistory</string>
    <string name="aboutCharacter">About character</string>
    <string name="appearance">Appearance</string>
    <string name="atmosphere">Atmosphere</string>
    <string name="cloth">Cloth</string>
    <string name="firstToSecondConnection">Connection of the first with the second</string>
    <string name="secondToFirstConnection">Connection of the second with the first</string>
    <string name="deleteConnection">Delete connection</string>
    <string name="deletedSuccessfully">Deleted successfully</string>
    <string name="enterTextToSearch">Enter text to search</string>
    <string name="book">Book</string>
    <string name="character">Character</string>
    <string name="chapter">Chapter</string>
    <string name="place">Place</string>
    <string name="idea">Idea</string>
</resources>