<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookInfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/bookTitleEditText"
                android:layout_width="350dp"
                android:autofillHints=""
                android:inputType="text"
                android:layout_height="wrap_content"
                style="@style/hintFontStyle"
                android:textSize="40sp"
                android:hint="@string/bookName" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/authorTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/authorNameTitle"
                    style="@style/someTextStyle"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:id="@+id/authorNameEditText"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    style="@style/hintFontStyle"
                    android:layout_toEndOf="@id/authorTitleTextView"
                    android:layout_marginStart="10dp"
                    android:layout_alignBaseline="@id/authorTitleTextView" />
            </RelativeLayout>

            <EditText
                android:id="@+id/bookDescriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginTop="20dp"
                android:hint="@string/book_description"
                android:padding="16dp"
                android:scrollbars="vertical"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:background="@drawable/rect_base"
                style="@style/hintFontStyle" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/characterListButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/charactersButton"
                style="@style/ButtonTextStyle"
                android:background="@drawable/rect_base" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/chaptersListButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/chaptersButton"
                style="@style/ButtonTextStyle"
                android:background="@drawable/rect_base" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dictionaryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/dictionaryButton"
                style="@style/ButtonTextStyle"
                android:background="@drawable/rect_base" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/locationListButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/locations"
                style="@style/ButtonTextStyle"
                android:background="@drawable/rect_base" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/deleteBookButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:text="@string/delete_book"
                style="@style/ButtonTextStyle"
                android:background="@drawable/rect_base" />

        </LinearLayout>
    </ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/BottomNavigationStyle"
        android:background="@color/DarkBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav" />

</androidx.constraintlayout.widget.ConstraintLayout>
